--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "compression": "1.6.2",
     "express": "4.14.0",
     "express-handlebars": "3.0.0",
-    "helmet": "2.1.2"
+    "helmet": "2.1.2",
+    "node-sass": "^4.9.2"
   },
   "engines": {
     "node": "^6.5.0"
